WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34157
REGRESSION(
r53835
): Fix editing/pasteboard/paste-noscript-xhtml.xhtml
https://bugs.webkit.org/show_bug.cgi?id=34157
Summary
REGRESSION(r53835): Fix editing/pasteboard/paste-noscript-xhtml.xhtml
Simon Hausmann
Reported
2010-01-26 01:17:22 PST
REGRESSION(
r53835
): Fix editing/pasteboard/paste-noscript-xhtml.xhtml
Attachments
Patch
(6.07 KB, patch)
2010-01-26 01:20 PST
,
Simon Hausmann
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2010-01-26 01:20:16 PST
Created
attachment 47392
[details]
Patch
Holger Freyther
Comment 2
2010-01-26 01:32:47 PST
Comment on
attachment 47392
[details]
Patch Looks fine.
Eric Seidel (no email)
Comment 3
2010-02-01 16:13:08 PST
Attachment 47392
[details]
was posted by a committer and has review+, assigning to Simon Hausmann for commit.
Simon Hausmann
Comment 4
2010-02-12 06:30:27 PST
Landed in
r53845
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug