REGRESSION(r53835): Fix editing/pasteboard/paste-noscript-xhtml.xhtml https://bugs.webkit.org/show_bug.cgi?id=34157

Reviewed by Holger Freyther.

WebCore:

Pass the FragmentScriptingPermission correctly through to the DOM
and disallow scripting elements in parseEndElement(), similar to
the libxml tokenizer change in r53835.

* dom/XMLTokenizerQt.cpp:
(WebCore::handleElementNamespaces):
(WebCore::handleElementAttributes):
(WebCore::XMLTokenizer::parseStartElement):
(WebCore::XMLTokenizer::parseEndElement):

LayoutTests:

Add Qt specific result for this test that differs from the cross-platform
result in only one character: In htmlcontent.html the href attribute value
is http://www.cnn.com, which somehow becomes http://www.cnn.com/ in the cross
platform result. With the Qt xml parser that attribute is somehow preserved
and so our result does not have the trailing slash.

* platform/qt/editing/pasteboard/paste-noscript-xhtml-expected.txt: Added.

Canonical link: https://commits.webkit.org/45228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53845 268f45cc-cd09-0410-ab3c-d52691b4dbfc